# pico_runtime_example

./: .gitignore  LICENSE  README.md
examples/AD5141_I2C/: CMakeLists.txt  main_ad5141_i2c.c
examples/AD5141_SPI/: CMakeLists.txt  main_ad5141_spi.c
examples/AD5142A/: CMakeLists.txt  main_ad5142a.c
examples/BMI270/: CMakeLists.txt  main_bmi270.c
examples/BlinkPIO/: CMakeLists.txt
examples/SHT21/: CMakeLists.txt  main_sht21.c
examples/USB/: CMakeLists.txt  main_USB.c
examples/VEML7700/: CMakeLists.txt  main_veml7700.c
examples/VL6180X/: CMakeLists.txt  main_vl6180x.c
firmware/: CMakeLists.txt  hardware_io.c  hardware_io.h  main.c
firmware/callbacks/: gpio_callbacks.c  rpc_callbacks.c
firmware/hal/: i2c.c  led.c  tmr.c  tmr.h  usb.c  usb.h
firmware/lib/: blink.pio.h  filter_iir0.c  filter_iir0.h  filter_iir1.c  filter_iir1.h  i2c_handler.c  i2c_handler.h  power_watch.c  power_watch.h  spi_handler.c  spi_handler.h  timer_daq.c  (+6 more)
generator/: __init__.py  pyproject.toml
python_api/: .gitignore  pyproject.toml
python_api/api/: __init__.py  conversion.py  daq_api.py  data_api.py  data_api_test.py  interface.py  lsl.py  lsl_test.py  mcu_api.py  mcu_api_test.py  mcu_conv.py  mcu_conv_test.py  serial.py
python_api/scripts/: lsl_example_minimal.py  lsl_host.py  lsl_mcu.py  plot_data.py  process_data.py  test.py
python_api/test_data/: 20251211_105255_data.h5  20251211_105305_util.h5  20260103_003821_mock.h5  20260103_003821_util.h5  20260106_110849_data.h5  20260106_110849_util.h5
template/: CMakeLists.txt  hardware_io.c  hardware_io.h  main.c
(+89 files in other folders)
